--- a/index.html
+++ b/index.html
@@ -135,53 +135,53 @@
                     <a href="">影音</a>
                     <a href="">配件</a>
                     <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
-                    <a href="">电脑</a>
+                    <a href="">网络</a>
+                    <a href="">办公</a>
+                    <a href="">打印</a>
+                    <a href="">家电</a>
+                    <a href="">厨艺</a>
+                    <a href="">生活</a>
+                    <a href="">个户</a>
+                    <a href="">园艺</a>
+                    <a href="">家具</a>
+                    <a href="">家纺</a>
+                    <a href="">家饰</a>
+                    <a href="">彩妆</a>
+                    <a href="">面部</a>
+                    <a href="">身体</a>
+                    <a href="">香水</a>
+                    <a href="">男装</a>
+                    <a href="">女装</a>
+                    <a href="">内衣</a>
+                    <a href="">其他</a>
+                    <a href="">女包</a>
+                    <a href="">男包</a>
+                    <a href="">女鞋</a>
+                    <a href="">男鞋</a>
+                    <a href="">运动</a>
+                    <a href="">户外</a>
+                    <a href="">装备</a>
+                    <a href="">服饰</a>
+                    <a href="">儿童</a>
+                    <a href="">婴儿</a>
+                    <a href="">食品</a>
+                    <a href="">玩具</a>
+                    <a href="">乐器</a>
+                    <a href="">家宠</a>
+                    <a href="">收藏</a>
+                    <a href="">鲜花</a>
+                    <a href="">保健</a>
+                    <a href="">理疗</a>
+                    <a href="">药品</a>
+                    <a href="">眼睛</a>
+                    <a href="">蔬果</a>
+                    <a href="">礼品</a>
+                    <a href="">粮油</a>
+                    <a href="">特产</a>
+                    <a href="">文艺</a>
+                    <a href="">生活</a>
+                    <a href="">科技</a>
+                    <a href="">教育</a>
                 </div>
             </div>
             <div id="whatIsBang5Mai">
