--- a/productPage.html
+++ b/productPage.html
@@ -100,7 +100,7 @@
         </div>
         <div id="navigation">
             <ul>
-                <li style="background-color: #fe0d4a"><a href="./index.html">首页</a></li>
+                <li style="background-color: #fe0d4a;"><a href="./index.html" style="padding: 14px 36px;">首页</a></li>
                 <li><a href="">热名品牌</a></li>
                 <li><a href="">美妆个护</a></li>
                 <li><a href="">服饰鞋包</a></li>
